# portfolio-backtester

./: .agent.md  .bandit  .gitignore  .gitmodules  .noindex  .pre-commit-config.yaml  .pre-commit-hooks.yaml  =0.58.0  =3.2.0  AGENTS.md  ARCHITECTURAL_VIOLATION_DETAILED_ANALYSIS.md  COMPOUNDING_IMPLEMENTATION.md  CONTRIBUTING.md  CRUSH.md  ENHANCED_METRICS_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  OPTIMIZATION_PERFORMANCE_PROOF.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SEPARATION_OF_CONCERNS_ANALYSIS_REPORT.md  TLT_long_month_1_walk_forward.db  TODO.md  analysis_report_prefix_removal.md  bandit.yaml  check_config.py  check_vix.py  class_diagram.md  commitmsg.txt  compare_signals.py  coverage.json  coverage_check.py  create_venv_symlink.bat  debug_backtester_config.py  debug_base_strategy.py  debug_config.py  debug_config_check.py  debug_discovery.py  (+98 more)
.crush/: crush.db  crush.db-shm  crush.db-wal
.cursor/rules/: run-optimizer-to-confirm.mdc
.dev/: TASKLIST.md
.gemini/: symbol_inventory.md
.gemini/implementation_plans/: market_data_multi_provider_integration.md
.gemini/tasks/: mdmp_integration_tasks.md
.github/workflows/: hypothesis-ci.yml  type-checking.yml
.kiro/hooks/: python-format-lint.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
.strategy_cache/: metadata.json  strategies.json
cache/: negative_cache.pkl
cache/sec_holdings/: 0000884394_2004-01-01_2025-07-03.parquet
cache/ssga_daily/: 2015-03-19.parquet  2015-03-20.parquet  2015-03-23.parquet  2015-03-24.parquet  2015-03-30.parquet  2015-04-02.parquet  2015-04-06.parquet  2015-04-10.parquet  2015-04-13.parquet  2015-04-14.parquet  2015-04-15.parquet  2015-04-17.parquet  2015-04-24.parquet  2015-04-27.parquet  2015-04-29.parquet  2015-04-30.parquet  2015-05-05.parquet  2015-05-06.parquet  2015-05-08.parquet  2015-05-11.parquet  2015-05-12.parquet  2015-05-20.parquet  2015-05-27.parquet  2015-06-03.parquet  2015-06-08.parquet  2015-06-12.parquet  2015-06-15.parquet  2015-06-16.parquet  2015-06-17.parquet  2015-06-18.parquet  2015-06-19.parquet  2015-06-23.parquet  2015-06-24.parquet  2015-06-25.parquet  2015-06-26.parquet  (+1122 more)
config/: parameters.yaml  parameters_backup.yaml  parameters_backup_test.yaml  scenarios.yaml  scenarios.yaml.backup  symbol_definitions.json  timing_examples.yaml
data/: AAPL.csv  ABBV.csv  ABT.csv  ACN.csv  ADBE.csv  AMAT.csv  AMD.csv  AMGN.csv  AMZN.csv  AVGO.csv  AXP.csv  BA.csv  BAC.csv  BIL.csv  BKNG.csv  BRK-B.csv  BTAL.csv  CAT.csv  CMCSA.csv  COP.csv  COST.csv  CRM.csv  CSCO.csv  CVX.csv  DBC.csv  DBMF.csv  DHR.csv  DIS.csv  DOW.csv  FXF.csv  FXY.csv  GBTC.csv  GE.csv  GLD.csv  GOOG.csv  GOOGL.csv  GS.csv  HD.csv  HON.csv  IAU.csv  (+76 more)
dev/: SPY_intramonth_seasonal_batch_opt_output.txt  _parity_single_month_vs_summary.py  exhaustive_spy_seasonal_month_subset_sortino.py  ga-performance-improvements.md  new_parallel_architecture.md  research_features_spy_seasonal.md  run_spy_intramonth_detailed_backtest.py  spy_intramonth_detailed_month_grid_and_subset.py  spy_intramonth_final_robustness_suite.py  spy_intramonth_maxdd_detailed_grid_subset_ibkr_rf_off_2005_2024.py  spy_intramonth_meta_subset_ibkr_legacy_sortino.py  spy_intramonth_per_month_grid_ibkr_legacy_2005_2024.py  spy_intramonth_roro_grid_subset_ibkr_rf_off_2005_2024.py  spy_seasonal_mask4086_roro_baseline_ibkr_rf_off.py  spy_seasonal_shared_exit_grid_ibkr_sortino.py  spy_seasonal_shared_exit_vectorized_ibkr_slip05_legacy.py  vulture_70.txt  vulture_report.md
docs/: CUSTOM_WFO_OVERVIEW_GEMINI.md  advanced_crossover_operators.md  calmar_momentum_strategy.md  config_validation_caching.md  configuration_genetic_algorithm.md  configuration_monte_carlo.md  configuration_wfo.md  data_source_sanity_checks.md  deprecation_guide.md  downloader_fail.txt  dp_vams_example.md  error_handling.md  extensibility_guide.md  fixed_weight_optimization_fixes.md  low_volatility_factor_strategy.md  migration_guide.md  optimizer_reporting_system.md  optrun1.md  optrun1.txt  optuna_database_management.md  performance_metrics.md  rebalance_frequency_guide.md  registration_design.md  research_validation.md  risk_off_signal_refactor_summary.md  signal_generator_integration_complete.md  simulation_execution_paths.md  sp500_universe_management.md  ssrn-5295002.md  timing_configuration_guide.md
examples/: README.md  deprecation_examples.py  hello_world_signal_strategy.py  meta_strategy_demo.py  registration_demo.py  simple_buy_hold.py  test_yaml_configs.py  unified_commission_example.py
report_dir/: performance_metrics.csv
scripts/: benchmark_objective_step.py  benchmark_optimizer_objective.py  check_error_handling_lint.py  clear_caches.py  config_cache_demo.py  country_etf_universe_ablation_sortino.py  enforce_provider_usage.py  evaluate_asri_signal_walkforward.py  fix_yaml_prefixes.py  generate_asri_donchian_walkforward_report.py  inspect_registry.py  profile_evaluate_parameters.py  profile_optimize_dummy.py  profile_summary.py  proof_dual_momentum_opt.yaml  remove_strategy_prefixes.py  run_bandit.py  run_monthly_seasonal_opt_batch.py  run_profiled_optuna.py  show_mypy_errors_first_file.py  solid_analysis.py  stop_loss_tester.py  summarize_seasonal_month_opt_runs.py  sync_wshobson_cursor_skills.py  test_synthetic_data.py  universe_search.py  update_protected_signatures.py
tests/: TEST_MAINTENANCE_GUIDE.md  conftest.py  test_api_stability.py  test_api_stability_decorator.py  test_api_stability_deprecation.py  test_api_stability_registry.py  test_backtester.py  test_config_loader.py  test_coverage_validation.py  test_data_cache.py  test_ema_roro_strategy.py  test_final_directional_metrics.py  test_numba_optimized.py  test_openfigi_integration.py  test_parallel_monte_carlo.py  test_parallel_wfo.py  test_parameter_filtering.py  test_roro_signals.py  test_signal_generators.py  test_universe_check.py  test_uvxy_rsi_strategy.py  test_volatility_integration.py  test_web_fallback.py  test_yaml_error_handling.py  verify_numba.py
tmp/: test_url.py  try_fb.py
tools/: vulture_whitelist.py
(+2793 files in other folders)
