[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backtester"
version = "0.1.0"
authors = [
  { name="Mateusz B.", email="matdev83@github.com" },
]
description = "A portfolio backtesting tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pygad",
    "optuna",
    "matplotlib",
    "seaborn",
    "yfinance",
    "lxml",
    "requests",
    "beautifulsoup4",
    "scikit-learn",
    "statsmodels",
    "numba",
    "rich",
    "pandas-market-calendars",
    "pyyaml",
    "pandas_datareader",
    "openpyxl",
    "plotly",
    "kaleido",
    "parameterized",
    "ta"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "radon",
    "xenon",
    "Pillow",
    "ruff"
]

[project.urls]
"Homepage" = "https://github.com/matdev83/portfolio-backtester"
"Bug Tracker" = "https://github.com/matdev83/portfolio-backtester/issues"
