[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-backtester"
version = "0.1.0"
authors = [
  { name="Mateusz B.", email="matdev83@github.com" },
]
description = "A portfolio backtesting tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pygad",
    "optuna",
    "matplotlib",
    "seaborn",
    "yfinance",
    "lxml",
    "requests",
    "beautifulsoup4",
    "scikit-learn",
    "statsmodels",
    "numba",
    "rich",
    "pandas-market-calendars",
    "pyyaml",
    "pandas_datareader",
    "openpyxl",
    "plotly",
    "kaleido",
    "parameterized",
    "ta",
    "edgar",
    "httpx",
    "tqdm",
    "psutil"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "radon",
    "xenon",
    "Pillow",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-requests",
    "types-beautifulsoup4",
    "types-PyYAML",
    "types-seaborn",
    "scipy-stubs",
    "black",
    "vulture"
]

[project.urls]
"Homepage" = "https://github.com/matdev83/portfolio-backtester"
"Bug Tracker" = "https://github.com/matdev83/portfolio-backtester/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# Global mypy configuration
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude problematic directories
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "__pycache__/",
    "tests/",
    "tmp/"
]

[[tool.mypy.overrides]]
module = [
    "src.portfolio_backtester.reporting.monte_carlo_stage2",
]
warn_unreachable = false
ignore_errors = false

# Critical modules with strict type checking
[[tool.mypy.overrides]]
module = [
    "src.portfolio_backtester.core",
    "src.portfolio_backtester.strategies.base_strategy",
    "src.portfolio_backtester.timing.custom_timing_registry",
    "src.portfolio_backtester.api_stability.*"
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_return_any = true

# Moderately strict for important strategy modules
[[tool.mypy.overrides]]
module = [
    "src.portfolio_backtester.strategies.*",
    "src.portfolio_backtester.backtester_logic.*",
    "src.portfolio_backtester.optimization.*"
]
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true

# Ignore third-party libraries that don't have type stubs
[[tool.mypy.overrides]]
module = [
    "pygad.*",
    "optuna.*",
    "yfinance.*",
    "pandas_datareader.*",
    "pandas_market_calendars.*",
    "ta.*",
    "numba.*",
    "statsmodels.*"
]
ignore_missing_imports = true

# Ignore specific modules with complex dependencies
[[tool.mypy.overrides]]
module = [
    "src.portfolio_backtester.numba_optimized",
    "src.portfolio_backtester.numba_kernels"
]
ignore_errors = true

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
    | data
    | coverage\.json
  )/
)
'''

[tool.pyrefly]
project-excludes = [
    "**/venv/",
    "**/.venv/",
    "**/build/",
    "**/dist/",
    "**/__pycache__/",
    "**/tests/",
    "**/tmp/",
]
search-path = ["src"]
python-version = "3.10.0"
ignore-missing-imports = [
    "pygad.*",
    "optuna.*",
    "yfinance.*",
    "pandas_datareader.*",
    "pandas_market_calendars.*",
    "ta.*",
    "numba.*",
    "statsmodels.*",
]
